# financial_manager

./: .gitignore  CMakeLists.txt  README.md  config.json  main.cc
cmake/: Findpg.cmake
controllers/: AccountController.cc  AccountController.h  BudgetController.cc  CategoryController.cc  CategoryController.h  PageController.cc  PageController.h  TransactionsController.cc  TransactionsController.h  TransferController.cc  TransferController.h  UserController.cc  UserController.h
models/: Account.cc  Account.h  Budgets.cc  Budgets.h  Category.cc  Category.h  Families.cc  Families.h  FamilyInvite.cc  FamilyInvite.h  FamilyMembers.cc  FamilyMembers.h  Transactions.cc  Transactions.h  Transfer.cc  Transfer.h  Users.cc  Users.h
views/: auth_register.cc  budgets.csp  categories.csp  create_family.csp  family_members.csp  home.csp  invite_family.csp  join_family.csp  signup.csp  transactions.csp  transfers.csp  welcome.csp
